# travel_of_the_day

./: .gitignore  README.md  docker-compose-deploy.yaml  docker-compose.yaml  docker.txt  redis-compose.yaml
together_back/: command.sh  dockerfile  pyproject.toml
together_back/boards/: models.py  serializers.py  urls.py  views.py
together_back/boards/migrations/: 0001_initial.py  0002_initial.py  0003_alter_board_subject.py
together_back/chattings/: consumers.py  models.py  serializers.py  urls.py  views.py
together_back/chattings/migrations/: 0001_initial.py  0002_initial.py
together_back/comments/: models.py  serializers.py  urls.py  views.py
together_back/comments/migrations/: 0001_initial.py  0002_alter_comment_board_alter_comment_writer.py  0002_initial.py
together_back/config/: asgi.py  routing.py  settings.py  urls.py
together_back/recomments/: apps.py  models.py  serializers.py  urls.py  views.py
together_back/recomments/migrations/: 0001_initial.py  0002_alter_recomment_comment_alter_recomment_writer.py  0002_initial.py
together_back/templates/account/email/: email_confirmation_signup_message.html
together_back/users/: admin.py  models.py  serializers.py  urls.py  views.py
together_back/users/migrations/: 0001_initial.py  0002_remove_user_age_remove_user_gender.py  0002_user_avatar_user_nickname.py  0003_alter_user_avatar.py
together_front/: .dockerignore  dockerfile  next.config.js  package-lock.json  package.json  routes.js
together_front_next/: package-lock.json  package.json
webserver/: default_nginx copy 2.conf  dockerfile  (+2 more)
(+56 files in other folders)
